# ocaml-quickstart

./: GNUmakefile  TODO  dune  example_lib.ml  guide.org  v.ml
makefiles/: Makefile.debug  Makefile.dldc  Makefile.gnumake  Makefile.help  Makefile.version  Makefile.version.git  Makefile.version.hg  Makefile.version.none
